[package]
name = "sanctum-router-jup-interface"
edition.workspace = true
license-file.workspace = true
version.workspace = true
include = ["src/**/*", "Cargo.toml"]

[dependencies]
anyhow = { workspace = true }
jupiter-amm-interface = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }

# solana-deps
# try not to use solana-sdk so that we can easily remove it in the future
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-sha256-hasher = { workspace = true }

[dev-dependencies]
generic-array-struct = { workspace = true }
test-utils = { workspace = true }
lazy_static = { workspace = true }
mollusk-svm = { workspace = true }
